--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -50,6 +50,7 @@
 }
 
 .sidebar__right {
+  width: 350px;
   margin-bottom: 1em;
 
   @include breakpoint($large) {
@@ -62,6 +63,11 @@
 
   @include breakpoint($x-large) {
     width: $right-sidebar-width;
+  }
+}
+@media (min-width: 64em) {
+  .initial-content {
+    margin-right: 300px;
   }
 }
 
