--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -3,7 +3,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
   gap: 18px;
-  margin: 1rem 0 2rem;
+  align-items: start;
 }
 
 .person {
