--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -34,7 +34,8 @@
 }
 
 .page__content {
-  margin-left: 280px !important;
+  margin-left: 270px !important;
+  padding-left: 0 !important;    /* remove inner padding if you want */
 }
 
 .author__bio { font-size: 0.95em; line-height: 1.4; }
